# kdbTrial

./: .gitignore  CMakeLists.txt  settings.json
data/: test.csv
include/: common.h  csvUtils.hpp  k_session.h  timeUtils.h  yahoo.hpp  yahooToString.hpp
include/KDB/: k.h  k_session.h  k_yahoo.h
include/test/: kdb.h  yahoo.h
src/: main.cpp
